syntax = "proto3";

package branch_service;
option go_package = "genproto/branch_service";
import "branch.proto";

service BranchProductService {
    rpc Create(CreateBranchProductRequest) returns (CreateBranchProductResponse) {}
    rpc Get(IdRequest) returns (GetBranchProductResponse) {}
    rpc List(ListBranchProductRequest) returns (ListBranchProductResponse) {}
    rpc Update(UpdateBranchProductRequest) returns (Response) {}
    rpc Delete(IdRequest) returns (Response) {}
}

message CreateBranchProductRequest { 
    string product_id = 1;
    string branch_id = 2;
    int32 quantity = 3;
}

message BranchProduct { 
    string id = 1;
    string product_id = 2;
    string branch_id = 3;
    int32 quantity = 4;
    string created_at = 6;
    string updated_at = 7;
}

message CreateBranchProductResponse {
    string id = 1;
}

message GetBranchProductResponse { 
    BranchProduct BranchProduct = 1;
}

message UpdateBranchProductRequest {
    string id = 1;
    string product_id = 2;
    string branch_id = 3;
    int32 quantity = 4;
}

message ListBranchProductRequest {
    int32 limit = 1;
    int32 offset = 2;
    string branch_id = 3;
    string product_id = 4;
}

message ListBranchProductResponse {
     repeated BranchProduct BranchProductes = 1;
     int32 count = 2;
}
